--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.35",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.344.0",
+    "next": "^14.2.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "tailwind-merge": "^2.6.1",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^20.19.32",
     "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
-    "typescript": "^5.9.3",
-    "tailwindcss": "^3.4.19",
-    "postcss": "^8.5.6",
     "autoprefixer": "^10.4.24",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.3"
   }
 }
